kubernetes/service_LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-go-service
spec:
  type: LoadBalancer
  selector:
    app: my-app-go
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
